# tts

./: .gitignore  README.md  index.html  input.txt  process_text.py  pyproject.toml  run.bat  script.js  style.css
audio/: 003.txt  004.txt  010.txt  011.txt  012.txt
eleven_tts_project/: tts_client.py
web_page/audio/: 001.txt  002.txt  005.txt  006.txt  007.txt  008.txt  009.txt
